# bitset2

./: CMakeLists.txt  conanfile.py
cmake/: bitset2Config.cmake.in
tests/: CMakeLists.txt
